# app.js
@@ -2,11 +2,11 @@
 const express = require("express");
 const session = require('express-session');
 const cors = require("cors");
-const routes = require("./routes");
+const routes = require("./routes"); // This should include all route registrations
 const errorHandler = require("./middleware/errorHandler");
 const swaggerUi = require("swagger-ui-express");
-const swaggerDocument = require("./swagger/swagger-output.json");
-const passport = require('./config/passport'); 
+const swaggerDocument = require("./swagger/swagger-output.json"); // Correct file name
+const passport = require('./config/passport');
 
 require("dotenv").config();
 
@@ -24,22 +24,21 @@ app.use(
   })
 );
 
-
 app.use(passport.initialize());
 app.use(passport.session());
 
 // Root route
 app.get('/', (req, res) => {
-  res.send("Welcom to ShopSphere API " + (req.user ? `${req.user.firstName}` : ""));;
+  res.send("Welcome to ShopSphere API " + (req.user ? `${req.user.firstName}` : ""));
 });
 
-// Mount routes
+// Mount routes (all your routes should be exported from routes/index.js)
 app.use("/", routes);
 
-// Swagger
+// Swagger UI
 app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
 // Global error handler
 app.use(errorHandler);
 
-module.exports = app; // EXPORT the app
+module.exports = app;
